<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_home"
        android:title="@string/bottomview_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_search"
        android:title="@string/bottomview_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_wishlist"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_wishlist"
        android:title="@string/bottomview_wishlist"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_inbox"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_inbox"
        android:title="@string/bottomview_inbox"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_user"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_user"
        android:title="@string/bottomview_user"
        app:showAsAction="ifRoom" />
</menu>